preload fonts and fix layout shifts on learn pages. (#5186)

--- a/src/styles/components/_header-default.scss
+++ b/src/styles/components/_header-default.scss
@@ -10,11 +10,6 @@
     }
   }
 
-  &__logo {
-    height: 30px;
-    width: 125px;
-  }
-
   &__middle {
     align-items: center;
     display: flex;
